# mathlib

./: .gitignore  CMakeLists.txt  README.md
LibMath/: CMakeLists.txt
LibMath/Header/LibMath/: Angle.h  Vector.h
LibMath/Header/LibMath/Vector/: Vector3.h  Vector4.h
LibMath/Source/: Angle.cpp  Vector.cpp
UnitTest/: CMakeLists.txt
UnitTest/Header/: TestCaller.h  Timer.h
UnitTest/Source/: Angle_UnitTest.cpp  Main.cpp  TestCaller.cpp  Vector_UnitTest.cpp
UnitTest/Source/MyTests/: AngleTest.cpp  ArithmeticTest.cpp  InterpolationTest.cpp  Intersection2DTest.cpp  Intersection3DTest.cpp  Matrix2Test.cpp  Matrix3Test.cpp  Matrix4Test.cpp  QuatTest.cpp  TrigTest.cpp  Vector2Test.cpp  Vector4Test.cpp
UnitTest/Source/ProvidedTests/: Angle_UnitTest.cpp  Trigonometry_UnitTest.cpp  Vector_UnitTest.cpp
UnitTest/Source/Tests/: AngleTest.cpp  ArithmeticTest.cpp  Matrix2Test.cpp  MatrixTest.cpp  TrigTest.cpp
generics-dev/: ArithmeticGeneric.hpp  IonCompiler.hpp  IonWarnings.hpp  MathGeneric.hpp  README.md
generics-dev/Header/: ArithmeticGeneric.hpp  MathGeneric.hpp
ion/: IonCompiler.hpp  IonDebug.hpp
libmath/: CMakeLists.txt
libmath/Header/libmath/: Angle.h  Angle.hpp  Arithmetic.h  Arithmetic.hpp  Interpolation.h  Intersection2D.h  Intersection3D.h  MathGeneric.hpp  Matrix.h  Matrix2.h  Matrix2.hpp  Matrix3.h  Matrix3.hpp  Matrix4.cpp  Matrix4.h  Matrix4.hpp  MatrixGeneric.hpp  Trigonometry.h  Vector2.h  Vector2.hpp  Vector3.h  Vector3.hpp  Vector4.h  Vector4.hpp  VectorGeneric.hpp
libmath/Source/: Angle.cpp  Arithmetic.cpp  Interpolation.cpp  Intersection2D.cpp  Intersection3D.cpp  Matrix.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Trigonometry.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
mathlib/: CMakeLists.txt
mathlib/Header/math/: Angle.hpp  Arithmetic.hpp  Interpolation.h  Interpolation.hpp  Intersection2D.h  Intersection3D.h  MathGeneric.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  MatrixGeneric.hpp  Quaternion.hpp  Trigonometry.h  Trigonometry.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  VectorGeneric.hpp
mathlib/Source/: Instanciations.cpp  Intersection2D.cpp  Intersection3D.cpp
